--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,9 +14,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     mapperLocations: classpath:/mapper/*.xml
     configLocation: classpath:/mybatis-config.xml
-    url: jdbc:mysql://localhost:3306/festech?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://119.23.73.34:3306/festech?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password:
+    password: G180831n
     driverClassName: com.mysql.jdbc.Driver
     minIdle: 5
     maxActive: 100
@@ -48,8 +48,8 @@ druid:
 ##mybatis设置(包括分页配置)
 mybatis:
   mapperLocations: classpath:/mapper/*.xml
-  typeAliasesPackage: com.grownest.app.bean
-  mapperScanPackage: com.grownest.app.mapper
+  typeAliasesPackage: com.festech.webapi.bean
+  mapperScanPackage: com.festech.webapi.mapper
   configLocation: classpath:/mybatis-config.xml
 mapper:
   mappers: com.festech.webapi.base.utils.MyMapper
