--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
-	<name>web-api</name>
+	<name>festech</name>
 	<description>web-api for festech</description>
 
 	<parent>
@@ -282,7 +282,7 @@
 
 	<build>
 
-		<finalName>app</finalName>
+		<finalName>festech</finalName>
 
 		<plugins>
 
