--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -14,9 +14,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     mapperLocations: classpath:/mapper/*.xml
     configLocation: classpath:/mybatis-config.xml
-    url: jdbc:mysql://localhost:3306/festech?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://212.64.35.73:3306/festech?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password:
+    password: Qwe123!@#
     driverClassName: com.mysql.jdbc.Driver
     minIdle: 5
     maxActive: 100
@@ -76,5 +76,6 @@ logging:
 
 #项目内设置
 project:
-  upload.path: /file
-  base.url: http://119.23.73.34/file
+  upload.path: /Users/me/Desktop/my-docker-dev/html/
+  base.url: http://localhost:8080
+
