--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -14,9 +14,9 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     mapperLocations: classpath:/mapper/*.xml
     configLocation: classpath:/mybatis-config.xml
-    url: jdbc:mysql://119.23.73.34:3306/festech?useUnicode=true&characterEncoding=utf-8&useSSL=false
+    url: jdbc:mysql://localhost:3306/festech?useUnicode=true&characterEncoding=utf-8&useSSL=false
     username: root
-    password: G180831n
+    password: Qwe123!@#
     driverClassName: com.mysql.jdbc.Driver
     minIdle: 5
     maxActive: 100
@@ -64,7 +64,7 @@ pagehelper:
 #日志设置
 logging:
   config: classpath:logback-springboot.xml
-  path: /Users/me/Desktop/log/${spring.application.name}
+  path: /opt/app/${spring.application.name}/log
   level:
     org:
       springframework:
@@ -76,6 +76,5 @@ logging:
 
 #项目内设置
 project:
-  upload.path: /Users/me/Desktop/my-docker-dev/html/
-  base.url: http://localhost:8080
-
+  upload.path: /file
+  base.url: http://118.126.99.168/file
